[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/GameOver.gd" type="Script" id=1]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.10803
margin_bottom = -1.10803
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -250.0
margin_right = 500.0
margin_bottom = 250.0
rect_min_size = Vector2( 1000, 500 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 990.0
margin_bottom = 490.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overview" type="Tabs" parent="Panel/MarginContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/TabContainer/Overview"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/TabContainer/Overview/VBoxContainer"]
margin_right = 972.0
margin_bottom = 364.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="FinalScoreLabel" type="Label" parent="Panel/MarginContainer/TabContainer/Overview/VBoxContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 972.0
margin_bottom = 93.0
text = "Final Score:"
align = 1
valign = 1

[node name="ScoreValue" type="Label" parent="Panel/MarginContainer/TabContainer/Overview/VBoxContainer/VBoxContainer"]
margin_top = 143.0
margin_right = 972.0
margin_bottom = 157.0
text = "0"
align = 1
valign = 1

[node name="PersonalBestLabel" type="Label" parent="Panel/MarginContainer/TabContainer/Overview/VBoxContainer/VBoxContainer"]
margin_top = 207.0
margin_right = 972.0
margin_bottom = 221.0
text = "Personal Best:"
align = 1

[node name="BestValue" type="Label" parent="Panel/MarginContainer/TabContainer/Overview/VBoxContainer/VBoxContainer"]
margin_top = 271.0
margin_right = 972.0
margin_bottom = 285.0
text = "0"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/TabContainer/Overview/VBoxContainer"]
margin_left = 356.0
margin_top = 414.0
margin_right = 616.0
margin_bottom = 444.0
rect_min_size = Vector2( 120, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 20
alignment = 1

[node name="RestartButton" type="Button" parent="Panel/MarginContainer/TabContainer/Overview/VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 30 )
text = "Restart"

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/TabContainer/Overview/VBoxContainer/HBoxContainer"]
margin_left = 140.0
margin_right = 260.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 30 )
text = "Quit"
[connection signal="pressed" from="Panel/MarginContainer/TabContainer/Overview/VBoxContainer/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/TabContainer/Overview/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
